Bug 758884 - (part 2/2) Check if position is still a descendant of pivot's root before moving in relation to it. r=davidb